<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/grey"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/admin_password"
        android:textColor="@color/darkPurple"
        android:textSize="@dimen/text_16_size" />

    <EditText
        android:id="@+id/etAdminPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:hint="@string/enter_password_to_change_ip"
        android:inputType="textPassword"
        android:textColor="@color/lightPurple"
        android:textSize="@dimen/text_14_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/ip_address"
        android:textColor="@color/darkPurple"
        android:textSize="@dimen/text_16_size" />

    <EditText
        android:id="@+id/etIPAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:enabled="false"
        android:hint="@string/IP_ADDRESS_HINT"
        android:textColor="@color/lightPurple"
        android:textSize="@dimen/text_14_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/darkPurple"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14_size" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/darkPurple"
            android:enabled="false"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/text_14_size" />


    </LinearLayout>

</LinearLayout>